src/main.css
body {
    font-family : 'Josefin Sans', sans-serif ;
    font-weight : 300 ;
}

h1 {
    font-family : 'Josefin Sans', sans-serif ;
    font-weight : 400 ;
}

h2 {
    font-weight : 400 ;
    padding-bottom : 0.3em ;
}

a {
    color: #428bca;
}

.lead {
    font-size : 1.2em ;
}

.content-container {
    padding-top: 110px;
    font-size : 18px ;
    padding-bottom : 2em ;
}

.link-array a + a {
    padding: 1rem;
}

/* Page headers */

.page-header {
    border-bottom: 1px solid #eee;
    margin-bottom: 20px;
    padding-bottom: 9px;
}

.page-header h1 {
    font-size: 2.3rem;
}

/* Navbar */

#top-navbar {
    font-size : 20px ;
    background-color : white ;
    box-shadow : 0px 3px 3px #aaa ;

    /* Override base navbar padding so container controls size.
       Only affects xs- screens. */
    padding-left: 0px ;
    padding-right: 0px;
}

#top-navbar .container {
    padding-left: 0; /* padding-left is absorbed in brand */
    padding-right: 15px;
}

#top-navbar .navbar-brand {
    font-size : 20px ;
    font-weight : 400 ;
    color : black ;
    padding-top : 8px ;
    padding-bottom : 8px ;
    padding-left: 15px;
    padding-right: 15px;
    border-radius : 5px ;
    margin-right : 20px ;
}


#top-navbar a.nav-link  {
    color : black ;
    border-radius : 5px ;
    margin-left : 10px ;
    margin-right : 10px ;
    padding-top : 12px ;
    padding-bottom : 10px ;
}

#top-navbar a.nav-link:hover,
#top-navbar a.nav-link:focus,
#top-navbar a.navbar-brand:hover,
#top-navbar a.navbar-brand:focus {
    color : white ;
    background-color : #222 ;

}

